# SUIZERO

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: DOCUMENTATION.md  STATUS.md  UPLOAD_INSTRUCTIONS.md  USER_GUIDE.md  VALIDATION_REPORT.md  suizero_analysis_results.md
examples/vulnerable_project/: Move.toml
examples/vulnerable_project/sources/: mega_vault.move  vault.move  vulnerablevault.move
src/: lib.rs  types.rs
src/core/: analyzer.rs  detector.rs  engine.rs  mod.rs  optimizer.rs  patterns.rs  taint.rs
src/detectors/: mod.rs
src/detectors/access_control/: mod.rs
src/detectors/ai_agents/: mod.rs
src/detectors/arithmetic/: mod.rs
src/detectors/bridges/: mod.rs
src/detectors/defi/: mod.rs
src/detectors/events/: mod.rs
src/detectors/extended/: access_control.rs  arithmetic.rs  capability_theater.rs  dos.rs  emergency_auth.rs  event_state_sync.rs  financial.rs  frontend.rs  governance.rs  hot_potato.rs  improper_validation.rs  mev_frontrunning.rs  missing_events.rs  mod.rs  nonce_enforcement.rs  observability.rs  oracle.rs  phantom_auth.rs  randomness_oracle.rs  receipt_forgery.rs  reentrancy.rs  specific_vulnerabilities.rs  state.rs  state_machine.rs  storage.rs  sui_specific.rs  temporal.rs  upgradeability.rs  value_conservation.rs  value_duplication.rs  vault_binding.rs
src/detectors/gas/: mod.rs
src/detectors/logic/: mod.rs
src/detectors/nfts/: mod.rs
src/detectors/objects/: mod.rs
src/detectors/oracles/: mod.rs
src/detectors/randomness/: mod.rs
src/detectors/reentrancy/: mod.rs
src/detectors/timing/: mod.rs
src/reporters/: mod.rs
src/utils/: mod.rs
