[package]
name = "suizero"
version = "1.2.0"
edition = "2021"
authors = ["SUIZERO Security Team <security@suizero.io>"]
description = "SUIZERO: The Advanced SUI Move Security Analyzer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/suizero/suizero"
homepage = "https://suizero.io"
keywords = ["sui", "move", "security", "analyzer", "smart-contract"]
categories = ["security", "cryptography::blockchain"]

[lib]
name = "sui_security_analyzer"
path = "src/lib.rs"

[[bin]]
name = "suizero"
path = "src/bin/suizero.rs"

[dependencies]
move-binary-format = { git = "https://github.com/mystenlabs/sui", tag = "mainnet-v1.5.0" }
move-core-types = { git = "https://github.com/mystenlabs/sui", tag = "mainnet-v1.5.0" }
move-bytecode-utils = { git = "https://github.com/mystenlabs/sui", tag = "mainnet-v1.5.0" }
move-disassembler = { git = "https://github.com/mystenlabs/sui", tag = "mainnet-v1.5.0" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
colored = "2.0"
comfy-table = "7.0"
indicatif = { version = "0.17", optional = true }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
rayon = { version = "1.7", optional = true }
petgraph = "0.6"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
regex = "1.8"
walkdir = "2.4"
glob = "0.3"
futures = "0.3"
dashmap = "5.4"
crossbeam = "0.8"
lazy_static = "1.4"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.6"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = ["parallel", "progress"]
parallel = ["rayon"]
progress = ["indicatif"]
full = ["parallel", "progress", "dashboard"]
dashboard = []
test-utils = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]